<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/login_email"
            android:layout_marginBottom="30dp"
            android:textSize="36sp"
            android:text="Log in"
            android:textStyle="bold"
            android:textColor="#37474f"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200sp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_corner"
            android:hint="@string/login_email"
            android:inputType="text"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20sp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@id/login_email" />

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintLeft_toLeftOf="@id/login_password"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            tools:text="WRONG INPUT" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="250sp"
            android:backgroundTint="#80d8ff"
            android:paddingVertical="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            />


        <View
            android:id="@+id/login_line_start"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/quantum_grey300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/or"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/quantum_grey700"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="@id/login_line_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_line_start" />

        <View
            android:id="@+id/login_line_end"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/quantum_grey300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/or"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_line_start"
            android:stateListAnimator="@null"
            />

        <TextView
            android:id="@+id/no_account_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/google_sign_in_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sign_up_text" />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="@+id/no_account_view"
            app:layout_constraintLeft_toRightOf="@id/no_account_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/no_account_view"
            android:textColor="@color/black"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
